apps/namespace.yaml

---
# namespace для приложений
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    istio-injection: enable

# настройка иньекций istio
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: jaeger-operator
  labels:
    istio-injection: disabled

---
apiVersion: v1
kind: Namespace
metadata:
  name: kiali-operator
  labels:
    istio-injection: disabled
