apps/apps-two-version.yaml
# v1 приложения
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-v1
  namespace: default
  labels:
    app: homework
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework
      version: v1
  template:
    metadata:
      labels:
        app: homework
        version: v1
    spec:
      containers:
      - name: homework
        image:  grunya404/homeworkistio1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
# v2 приложения
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homework-v2
  namespace: default
  labels:
    app: homework
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homework
      version: v2
  template:
    metadata:
      labels:
        app: homework
        version: v2
    spec:
      containers:
      - name: homework
        image:  grunya404/homeworkistio1:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: homework
  namespace: default
spec:
  type: NodePort
  selector:
    app: homework
  ports:
    - name: http
      port: 80
      targetPort: 8080
