apps/apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: apps
  labels:
    app: app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v1
  template:
    metadata:
      labels:
        app: app
        version: v1
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: nik1202/hw1:v4.1
          ports:
            - name: web
              containerPort: 8000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app2
  namespace: apps
  labels:
    app: app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
      version: v2
  template:
    metadata:
      labels:
        app: app
        version: v2
    spec:
      containers:
        - name: app
          imagePullPolicy: Always
          image: nik1202/hw1:v4.2
          ports:
            - name: web
              containerPort: 8000

---

apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: apps
  labels:
    name: app
spec:
  type: NodePort
  ports:
    - name: web
      port: 8000
      targetPort: 8000
      protocol: TCP
  selector:
    app: app

---
