apps/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
  namespace: apps
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-virtualservice
  namespace: apps
spec:
  hosts:
    - "*"
  gateways:
    - app-gateway
  http:
    - match:
      - uri:
          prefix: /hello
      route:
        - destination:
            port:
              number: 8000
            host: app
            subset: v1
          weight: 50
        - destination:
            port:
              number: 8000
            host: app
            subset: v2
          weight: 50

---

apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: app
  namespace: apps
spec:
  host: app
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - name: v1
      labels:
        version: v1
    - name: v2
      labels:
        version: v2

---
